--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-mailer": "^0.3.1",
     "http-errors": "~1.6.2",
+    "mailgun-js": "^0.22.0",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "url": "^0.11.0"
   }
 }
